<resources>
    <string name="app_name">Calculation Tester</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="dash">-</string>
    <string name="clear">Clear</string>
    <string name="generate">Play</string>
    <string name="quit">Quit</string>
    <string name="show_all">Show All</string>
    <string name="equal">=</string>
    <string name="go_back">Go Back</string>
    <string name="save">save</string>
</resources>
