<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_gravity="center"
           android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="--------------"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    <TableLayout
        android:id="@+id/TL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/FL"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button android:text="@string/seven"></Button>
            <Button android:text="@string/eight"></Button>
            <Button android:text="@string/nine"></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button android:text="@string/four"></Button>
            <Button android:text="@string/five"></Button>
            <Button android:text="@string/six"></Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button android:text="@string/one"></Button>
            <Button android:text="@string/two"></Button>
            <Button android:text="@string/three"></Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button android:text="@string/zero"></Button>
            <Button android:text="@string/dot"></Button>
            <Button android:text="@string/dash"></Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button android:text="@string/clear"></Button>
            <Button android:text="@string/generate"></Button>
            <Button android:text="@string/quit"></Button>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/TL"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equal" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_all" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>